@@ -26,7 +26,7 @@ import ch.alpine.java.win.BaseFrame;
 public enum DemoLauncher {
   ;
   private static final int BUTTON_HEIGHT = 24;
-  private static final Comparator<Class<?>> CLASSNAMECOMPARATOR = new Comparator<Class<?>>() {
+  private static final Comparator<Class<?>> CLASSNAMECOMPARATOR = new Comparator<>() {
     @Override
     public int compare(Class<?> c1, Class<?> c2) {
       return c1.getName().compareToIgnoreCase(c2.getName());
@@ -60,7 +60,7 @@ public enum DemoLauncher {
         JButton jButton = new JButton(cls.getSimpleName());
         jButton.addActionListener(event -> {
           try {
-            DemoInterface demoInterface = (DemoInterface) cls.newInstance();
+            DemoInterface demoInterface = (DemoInterface) cls.getDeclaredConstructor().newInstance();
             BaseFrame baseFrame = demoInterface.start();
             baseFrame.jFrame.setTitle(demoInterface.getClass().getSimpleName());
             baseFrame.jFrame.setBounds(100, 100, 1200, 800);
